--- a/conf/index.html
+++ b/conf/index.html
@@ -31,7 +31,7 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
 <p><span class="STYLE1">查看本地环境：</span><a href="/p.php" target="_blank" class="links">探针</a>　<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>　<a href="/phpmyadmin/" target="_blank" class="links">phpMyAdmin</a></p>
 
 <p>更多LNMP一键安装包信息请访问： <a href="http://lnmp.org" target="_blank">http://lnmp.org</a></p>
-<p>LNMP一键安装包问题反馈请访问： <a href="http://bbs.vpser.net/thread-841-1-1.html" target="_blank">http://bbs.vpser.net/thread-841-1-1.html</a></p>
+<p>LNMP一键安装包问题反馈请访问： <a href="http://bbs.vpser.net/forum-25-1.html" target="_blank">http://bbs.vpser.net/forum-25-1.html</a></p>
 <p>VPS相关教程： <a href="http://www.vpser.net/vps-howto/" target="_blank">http://www.vpser.net/vps-howto/</a></p>
 <p>美国VPS推荐： <a href="http://www.vpser.net/usa-vps/" target="_blank">http://www.vpser.net/usa-vps/</a></p>
 
