--- a/conf/index.html
+++ b/conf/index.html
@@ -28,7 +28,7 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
 <br>
 <h2><a href="http://lnmp.org" target="_blank">LNMP一键安装包</a>是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装LNMP(Nginx、MySQL、PHP、phpMyAdmin)生产环境的Shell程序。<br></h2>
 
-<p><span class="STYLE1">查看本地环境：</span><a href="/p.php" target="_blank" class="links">探针</a>　<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>　<a href="/phpmyadmin/" target="_blank" class="links">phpMyAdmin</a></p>
+<p>查看本地环境：</span><a href="/p.php" target="_blank" class="links">探针</a>　<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>　<a href="/phpmyadmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将phpmyadmin目录重命名为不容易猜到的目录！)</p>
 
 <p>更多LNMP一键安装包信息请访问： <a href="http://lnmp.org" target="_blank">http://lnmp.org</a></p>
 <p>LNMP一键安装包问题反馈请访问： <a href="http://bbs.vpser.net/forum-25-1.html" target="_blank">http://bbs.vpser.net/forum-25-1.html</a></p>
