--- a/conf/index.html
+++ b/conf/index.html
@@ -36,6 +36,8 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
 <p>VPS相关教程: <a href="http://www.vpser.net/vps-howto/" target="_blank">http://www.vpser.net/vps-howto/</a></p>
 <p>美国VPS推荐: <a href="http://www.vpser.net/usa-vps/" target="_blank">http://www.vpser.net/usa-vps/</a></p>
 
+<div align="center"><b>声明：出现该页面只说明您当前访问的网站使用了LNMP一键安装包搭建的环境，当前网站与LNMP一键安装包、VPS侦探和licess不存在任何关系！</b></div>
+
 <div align="center"><h3><a href="http://lnmp.org" target="_blank">LNMP一键安装包</a> by <a href="http://blog.licess.com/" target="_blank">Licess</a> & <a href="http://www.vpser.net" target="_blank">VPS侦探</a></h3></div>
 </div>
 </body>
