--- a/conf/index.html
+++ b/conf/index.html
@@ -27,18 +27,18 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
 <div align="center"><b>恭喜您，LNMP一键安装包安装成功！</b></div>
 <div align="center"><img src="lnmp.gif" alt="LNMP一键安装包"></div>
 <br>
-<h2><a href="http://lnmp.org" target="_blank">LNMP一键安装包</a>是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装LNMP(Nginx、MySQL/Mariadb、PHP)、LNMPA(Nginx、MySQL/Mariadb、PHP、Apache)、LAMP(Apache、MySQL/Mariadb、PHP)生产环境的Shell程序。<br></h2>
+<h2><a href="https://lnmp.org" target="_blank">LNMP一键安装包</a>是一个用Linux Shell编写的可以为CentOS/RadHat/Fedora、Debian/Ubuntu/Raspbian/Deepin VPS或独立主机安装LNMP(Nginx/MySQL/PHP)、LNMPA(Nginx/MySQL/PHP/Apache)、LAMP(Apache/MySQL/PHP)生产环境的Shell程序。同时提供一些实用的辅助工具如：虚拟主机管理、FTP用户管理、Nginx、MySQL/MariaDB、PHP的升级、常用缓存组件Redis、Xcache等的安装、重置MySQL root密码、502自动重启、日志切割、SSH防护DenyHosts/Fail2Ban、备份等许多实用脚本。<br></h2>
 
 <p>查看本地环境: <a href="/p.php" target="_blank" class="links">探针</a>&nbsp;&nbsp;<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>&nbsp;&nbsp;<a href="/phpmyadmin/" target="_blank" class="links">phpMyAdmin</a>(为了安全，建议将phpmyadmin目录重命名为不容易猜到的目录！)</p>
 
-<p>更多LNMP一键安装包信息请访问: <a href="http://lnmp.org" target="_blank">http://lnmp.org</a></p>
-<p>LNMP一键安装包问题反馈请访问: <a href="http://bbs.vpser.net/forum-25-1.html" target="_blank">http://bbs.vpser.net/forum-25-1.html</a></p>
-<p>VPS相关教程: <a href="http://www.vpser.net/vps-howto/" target="_blank">http://www.vpser.net/vps-howto/</a></p>
-<p>美国VPS推荐: <a href="http://www.vpser.net/usa-vps/" target="_blank">http://www.vpser.net/usa-vps/</a></p>
+<p>更多LNMP一键安装包信息请访问: <a href="https://lnmp.org" target="_blank">https://lnmp.org</a></p>
+<p>LNMP一键安装包问题反馈请访问: <a href="https://bbs.vpser.net/forum-25-1.html" target="_blank">https://bbs.vpser.net/forum-25-1.html</a></p>
+<p>VPS相关教程: <a href="https://www.vpser.net/vps-howto/" target="_blank">https://www.vpser.net/vps-howto/</a></p>
+<p>美国VPS推荐: <a href="https://www.vpser.net/usa-vps/" target="_blank">https://www.vpser.net/usa-vps/</a></p>
 
 <div align="center"><b>声明：出现该页面只说明您当前访问的网站使用了LNMP一键安装包搭建的环境，当前网站与LNMP一键安装包、VPS侦探和licess不存在任何关系！</b></div>
 
-<div align="center"><h3><a href="http://lnmp.org" target="_blank">LNMP一键安装包</a> by <a href="http://blog.licess.com/" target="_blank">Licess</a> & <a href="http://www.vpser.net" target="_blank">VPS侦探</a></h3></div>
+<div align="center"><h3><a href="https://lnmp.org" target="_blank">LNMP一键安装包</a> by <a href="http://blog.licess.com/" target="_blank">Licess</a> & <a href="https://www.vpser.net" target="_blank">VPS侦探</a></h3></div>
 </div>
 </body>
 </html>
